# dual-momentum-backtest

./: .gitignore  README.md  dual-momentum-backtest.ipynb  pyproject.toml  requirements.txt
notebooks/: dual-momentum-backtest.ipynb
src/dmbacktest/: core.py  data.py
src/dual_momentum/: __init__.py
src/dual_momentum/core/: extra.py  model.py
src/dual_momentum/tools/: README.md  colab_setup.py
src/dual_momentum/ui/: __init__.py  dashboard.py  widgets.py
src/dual_momentum/utils/: logger.py
src/dual_momentum/validators/: input.py
